[gd_scene load_steps=15 format=2]

[ext_resource path="res://visual/training/wheel/wheel_1.png" type="Texture" id=1]
[ext_resource path="res://visual/effects/particles/window_04.png" type="Texture" id=2]
[ext_resource path="res://visual/training/wheel/arrow.png" type="Texture" id=3]
[ext_resource path="res://visual/training/wheel/stop.png" type="Texture" id=4]
[ext_resource path="res://scripts/training/spinner.gd" type="Script" id=5]

[sub_resource type="Animation" id=44]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "move"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.7, 0.7, 1 ),
"update": 0,
"values": [ Vector2( -100, -233 ), Vector2( 736, -233 ), Vector2( -100, -233 ) ]
}

[sub_resource type="Animation" id=45]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=43]
resource_name = "spin_0.2"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spinner_sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "spin_0.5"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spinner_sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "spin_1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spinner_sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "spin_2"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spinner_sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.770408, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=6]
radius = 62.2896

[node name="spinner" type="Node2D"]
position = Vector2( 220, 320 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 5 )

[node name="StopAnimation" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 44 )
anims/move = SubResource( 7 )

[node name="SpinAnimation" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 45 )
anims/spin_0.2 = SubResource( 43 )
anims/spin_0.5 = SubResource( 2 )
anims/spin_1 = SubResource( 3 )
anims/spin_2 = SubResource( 4 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 40
lifetime = 0.5
speed_scale = 0.5
texture = ExtResource( 2 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 534.66
initial_velocity_random = 1.0
scale_amount = 0.1
color = Color( 1, 0.133333, 0.133333, 1 )
color_ramp = SubResource( 5 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="spinner_sprite" type="Sprite" parent="."]
rotation = 6.28319
texture = ExtResource( 1 )

[node name="pointer_sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.937255, 0, 1 )
position = Vector2( 160, 0.999996 )
rotation = -1.5708
scale = Vector2( 0.0966797, 0.0966797 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 128.196, -233 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="stop_sprite" type="Sprite" parent="Area2D"]
modulate = Color( 0.819608, 0.0627451, 0.0627451, 1 )
position = Vector2( 0.00012207, -3.05176e-05 )
scale = Vector2( 0.232422, 0.232422 )
texture = ExtResource( 4 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
